--- a/com.natsaudi.library.android.calander/build.gradle
+++ b/com.natsaudi.library.android.calander/build.gradle
@@ -59,5 +59,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
